# haskell-website

./: .gitignore  .stylish-haskell.yaml  LICENSE  README.md  cabal.project.freeze  website.cabal
.github/workflows/: build-and-push.yml  build.yml
docker/: Dockerfile
src/: Main.hs
src/Server/: Config.hs  Controller.hs  HttpClient.hs  Main.hs  Service.hs
src/Static/: datenschutz.html  impressum.html  imprint.html  index.html  legal-notice.html  privacy-policy.html  site.webmanifest
src/Static/css/: main.css
test/: tests.sh  utils.sh
