name:                website
version:             0.1.0.0
synopsis:            sattelmaier.info website
homepage:            https://github.com/asattelmaier/website
license:             BSD3
license-file:        LICENSE
author:              Alexander Sattelmaier
maintainer:          alexander@sattelmaier.info
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  CHANGELOG.md,
  README.md,
  .stylish-haskell.yaml

executable website
  main-is:               Main.hs
  default-language:      Haskell2010
  hs-source-dirs:        src
  ghc-options:           -Wall
  
  other-modules:
    Server.Config,
    Server.Controller,
    Server.Main,
    Server.Service

  build-depends:
    base                 ==4.14.3.0,
    bytestring           ==0.10.12.0,
    snap                 ==1.1.3.1,
    snap-core            ==1.0.4.2,
    snap-server          ==1.1.2.0,
    snap-loader-static   ==1.0.0.1,
    text                 ==1.2.5.0

source-repository head
  type:     git
  location: git://github.com/asattelmaier/website.git

