name:                website
version:             0.1.0.0
synopsis:            sattelmaier.info website
homepage:            https://github.com/asattelmaier/website
license:             BSD3
license-file:        LICENSE
author:              Alexander Sattelmaier
maintainer:          alexander@sattelmaier.info
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  CHANGELOG.md,
  README.md,
  .stylish-haskell.yaml

executable website
  main-is:               Main.hs
  default-language:      Haskell2010
  hs-source-dirs:        src
  ghc-options:           -Wall
  
  other-modules:
    Server.Config,
    Server.Controller,
    Server.Main

  build-depends:
    base                 ==4.17.0.0,
    bytestring           ==0.11.3.1,
    connection           ==0.3.1,
    directory            ==1.3.7.1,
    http-client          ==0.7.13.1,
    http-client-tls      ==0.3.6.1,
    http-conduit         ==2.3.8.2,
    snap                 ==1.1.3.1,
    snap-core            ==1.0.5.1,
    snap-server          ==1.1.2.1,
    snap-loader-static   ==1.0.0.1,
    text                 ==2.0.1

source-repository head
  type:     git
  location: git://github.com/asattelmaier/website.git

